# iec61850-dissector

./: CMakeLists.txt  README.md  wireshark_dissector.code-workspace
asn1/: generate.sh  iec61850.asn  iec61850.cnf  packet-iec61850-template.c  packet-iec61850-template.h
cmake/: LocatePythonModule.cmake
src/: map-iec61850.c  map-iec61850.h  packet-iec61850.c  packet-iec61850.h
test/: RGOOSE2.pcap  capture.pcapng  ccc.pcapng  ccc2.pcapng  error.pcapng  error2.pcapng  filter_retransmit.pcapng  goose_trace.pcap  gsse_data.pcap  iec61850.pcapng  iec90-5-samples.pcap  mms_resp.pcap
tools/: make-plugin-reg.py
